k8s/development/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dcm-development
  labels:
    name: dcm-development
    environment: development
